@@ -1,3 +1,6 @@
+/* 
+  Static part of GridPanel's JavaScript class.
+*/
 Netzke.pre.GridPanel = Ext.extend(Ext.grid.EditorGridPanel, {
   trackMouseOver: true,
   loadMask: true,
